--- a/protocol-zero/src/renderer/index.html
+++ b/protocol-zero/src/renderer/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <title>Protocol: Zero</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap');
+
     html,
     body {
       margin: 0;
@@ -13,6 +15,8 @@
       height: 100%;
       overflow: hidden;
       background-color: #000;
+      font-family: 'Rajdhani', sans-serif;
+      user-select: none;
     }
 
     #renderCanvas {
@@ -21,19 +25,240 @@
       touch-action: none;
     }
 
-    #ui-hint {
+    /* HUD Container */
+    #game-hud {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      display: none;
+      z-index: 10;
+    }
+
+    /* Top Bar */
+    #top-bar {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .score-box {
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 5px 15px;
+      font-size: 24px;
+      font-weight: bold;
+      border-radius: 4px;
+      min-width: 40px;
+      text-align: center;
+    }
+
+    .score-box.red {
+      border-bottom: 3px solid #ff4655;
+    }
+
+    .score-box.blue {
+      border-bottom: 3px solid #00e5ff;
+    }
+
+    .timer-box {
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      padding: 5px 20px;
+      font-size: 28px;
+      font-weight: bold;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    /* Player Stats (Bottom Left) */
+    #player-stats {
+      position: absolute;
+      bottom: 30px;
+      left: 40px;
+      color: white;
+    }
+
+    .stat-row {
+      display: flex;
+      align-items: baseline;
+      margin-bottom: 5px;
+    }
+
+    .stat-icon {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.6);
+      margin-right: 10px;
+      width: 20px;
+    }
+
+    .stat-value {
+      font-size: 42px;
+      font-weight: bold;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+    }
+
+    /* Ability Bar (Bottom Center) */
+    #ability-bar {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+    }
+
+    .ability-icon {
+      width: 50px;
+      height: 50px;
+      background: rgba(0, 0, 0, 0.5);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
+    .ability-icon.active {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: white;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    }
+
+    .ability-icon.ultimate {
+      background: rgba(255, 70, 85, 0.2);
+      border-color: #ff4655;
+    }
+
+    /* Ammo Panel (Bottom Right) */
+    #ammo-panel {
+      position: absolute;
+      bottom: 30px;
+      right: 40px;
+      text-align: right;
+      color: white;
+    }
+
+    .ammo-primary {
+      font-size: 48px;
+      font-weight: bold;
+    }
+
+    .ammo-reserve {
+      font-size: 24px;
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    /* Kill Feed */
+    #kill-feed {
+      position: absolute;
+      top: 80px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      align-items: flex-end;
+    }
+
+    .kill-feed-item {
+      background: linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.6));
+      padding: 5px 15px;
+      color: white;
+      font-size: 14px;
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      transition: opacity 0.5s;
+    }
+
+    .kill-feed-item .killer {
+      color: #00e5ff;
+      font-weight: bold;
+    }
+
+    .kill-feed-item .victim {
+      color: #ff4655;
+      font-weight: bold;
+    }
+
+    .kill-feed-item .headshot {
+      color: #ff4655;
+      font-size: 18px;
+    }
+
+    /* Crosshair */
+    #crosshair {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      width: 4px;
+      height: 4px;
+      background: #00e5ff;
+      border-radius: 50%;
+      box-shadow: 0 0 4px #00e5ff;
+      display: none;
+      z-index: 20;
+    }
+
+    /* UI Hint Overlay */
+    #ui-hint {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       color: white;
-      font-family: 'Courier New', monospace;
-      font-size: 16px;
       text-align: center;
+      z-index: 100;
       pointer-events: none;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 20px;
-      border-radius: 8px;
+      /* Allow clicks to pass through to canvas */
+    }
+
+    #ui-hint h1 {
+      font-size: 64px;
+      margin: 0 0 20px 0;
+      letter-spacing: 10px;
+      color: #ff4655;
+      text-shadow: 0 0 20px rgba(255, 70, 85, 0.5);
+    }
+
+    #ui-hint p {
+      font-size: 24px;
+      animation: blink 1s infinite;
+    }
+
+    .controls {
+      margin-top: 40px;
+      display: flex;
+      gap: 30px;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    @keyframes blink {
+
+      0%,
+      100% {
+        opacity: 1;
+      }
+
+      50% {
+        opacity: 0.5;
+      }
     }
   </style>
 </head>
@@ -41,18 +266,62 @@
 <body>
   <canvas id="renderCanvas"></canvas>
 
+  <!-- Game HUD -->
+  <div id="game-hud">
+    <!-- Top Bar: Timer & Score -->
+    <div id="top-bar">
+      <div class="score-box red">0</div>
+      <div class="timer-box">1:45</div>
+      <div class="score-box blue">0</div>
+    </div>
+
+    <!-- Kill Feed -->
+    <div id="kill-feed"></div>
+
+    <!-- Bottom Left: Health & Armor -->
+    <div id="player-stats">
+      <div class="stat-row">
+        <div class="stat-icon">HP</div>
+        <div class="stat-value" id="health-value">100</div>
+      </div>
+      <div class="stat-row">
+        <div class="stat-icon">AP</div>
+        <div class="stat-value" id="armor-value">50</div>
+      </div>
+    </div>
+
+    <!-- Bottom Center: Abilities -->
+    <div id="ability-bar">
+      <div class="ability-icon" id="ability-1">C</div>
+      <div class="ability-icon" id="ability-2">Q</div>
+      <div class="ability-icon active" id="ability-3">E</div>
+      <div class="ability-icon ultimate" id="ability-4">X</div>
+    </div>
+
+    <!-- Bottom Right: Ammo -->
+    <div id="ammo-panel">
+      <div class="ammo-primary" id="ammo-value">25</div>
+      <div class="ammo-reserve" id="magazine-value">75</div>
+    </div>
+  </div>
+
+  <!-- Crosshair -->
+  <div id="crosshair"></div>
+
+  <!-- UI Hint (Overlay) -->
   <div id="ui-hint">
-    點擊畫面鎖定滑鼠<br>
-    WASD 移動 | 空格 跳躍 | 左鍵 射擊<br>
-    ESC 解除鎖定
+    <h1>PROTOCOL: ZERO</h1>
+    <p>CLICK TO START</p>
+    <div class="controls">
+      <span>WASD Move</span>
+      <span>SPACE Jump</span>
+      <span>L-CLICK Shoot</span>
+    </div>
   </div>
 
-  <div id="crosshair"
-    style="position: absolute; top: 50%; left: 50%; width: 4px; height: 4px; background: cyan; transform: translate(-50%, -50%); border-radius: 50%; display: none; pointer-events: none; box-shadow: 0 0 4px cyan;">
-  </div>
-
+  <!-- Settings Panel (Hidden by default) -->
   <div id="settings-panel"
-    style="position: absolute; top: 20px; right: 20px; background: rgba(0,0,0,0.7); padding: 15px; border-radius: 8px; color: white; font-family: sans-serif;">
+    style="display: none; position: absolute; top: 20px; right: 20px; background: rgba(0,0,0,0.7); padding: 15px; border-radius: 8px; color: white; font-family: sans-serif; z-index: 1000;">
     <h3 style="margin-top: 0;">SETTINGS</h3>
     <label>
       Sensitivity: <span id="sensitivity-value">1.5</span><br>
