--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -25,6 +25,189 @@
       touch-action: none;
     }
 
+    /* Main Menu Panel */
+    #main-menu-panel {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(10, 10, 30, 0.95), rgba(20, 10, 40, 0.95));
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      pointer-events: all;
+    }
+
+    #main-menu-panel h1 {
+      font-size: 72px;
+      margin: 0 0 60px 0;
+      letter-spacing: 15px;
+      color: #00e5ff;
+      text-shadow: 0 0 30px rgba(0, 229, 255, 0.8), 0 0 60px rgba(0, 229, 255, 0.4);
+      animation: glow-pulse 2s ease-in-out infinite;
+    }
+
+    @keyframes glow-pulse {
+
+      0%,
+      100% {
+        text-shadow: 0 0 30px rgba(0, 229, 255, 0.8), 0 0 60px rgba(0, 229, 255, 0.4);
+      }
+
+      50% {
+        text-shadow: 0 0 40px rgba(0, 229, 255, 1), 0 0 80px rgba(0, 229, 255, 0.6);
+      }
+    }
+
+    .menu-buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .menu-btn {
+      padding: 15px 60px;
+      font-size: 28px;
+      font-weight: bold;
+      background: rgba(0, 229, 255, 0.1);
+      border: 2px solid #00e5ff;
+      color: #00e5ff;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      backdrop-filter: blur(10px);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .menu-btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(0, 229, 255, 0.3), transparent);
+      transition: left 0.5s;
+    }
+
+    .menu-btn:hover::before {
+      left: 100%;
+    }
+
+    .menu-btn:hover {
+      background: rgba(0, 229, 255, 0.2);
+      box-shadow: 0 0 20px rgba(0, 229, 255, 0.5), inset 0 0 20px rgba(0, 229, 255, 0.1);
+      transform: translateY(-2px);
+    }
+
+    .menu-btn:active {
+      transform: translateY(0);
+    }
+
+    /* Foundry Panel */
+    #foundry-panel {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(10, 10, 30, 0.95), rgba(30, 10, 20, 0.95));
+      display: none;
+      flex-direction: column;
+      z-index: 1000;
+      pointer-events: all;
+      overflow: hidden;
+    }
+
+    .foundry-header {
+      padding: 30px 40px;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 2px solid #ff4655;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .foundry-header h2 {
+      font-size: 42px;
+      margin: 0;
+      color: #ff4655;
+      letter-spacing: 8px;
+      text-shadow: 0 0 20px rgba(255, 70, 85, 0.6);
+    }
+
+    .foundry-content {
+      flex: 1;
+      padding: 40px;
+      overflow-y: auto;
+    }
+
+    .weapon-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 25px;
+    }
+
+    .weapon-card {
+      background: rgba(0, 0, 0, 0.4);
+      border: 2px solid rgba(0, 229, 255, 0.3);
+      padding: 20px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(10px);
+    }
+
+    .weapon-card:hover {
+      border-color: #00e5ff;
+      box-shadow: 0 0 25px rgba(0, 229, 255, 0.4);
+      transform: translateY(-5px);
+    }
+
+    .weapon-card h3 {
+      margin: 0 0 10px 0;
+      font-size: 24px;
+      color: #00e5ff;
+    }
+
+    .weapon-card p {
+      margin: 5px 0;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    .weapon-card .weapon-type {
+      display: inline-block;
+      padding: 4px 12px;
+      background: rgba(255, 70, 85, 0.2);
+      border: 1px solid #ff4655;
+      color: #ff4655;
+      font-size: 12px;
+      margin-top: 10px;
+      text-transform: uppercase;
+    }
+
+    .back-btn {
+      padding: 10px 30px;
+      font-size: 18px;
+      background: rgba(255, 70, 85, 0.1);
+      border: 2px solid #ff4655;
+      color: #ff4655;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    .back-btn:hover {
+      background: rgba(255, 70, 85, 0.2);
+      box-shadow: 0 0 15px rgba(255, 70, 85, 0.4);
+    }
+
     /* HUD Container */
     #game-hud {
       position: absolute;
@@ -209,62 +392,51 @@
       z-index: 20;
     }
 
-    /* UI Hint Overlay */
-    #ui-hint {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
-      z-index: 100;
-      pointer-events: none;
-      /* Allow clicks to pass through to canvas */
+    /* Scrollbar Styling */
+    .foundry-content::-webkit-scrollbar {
+      width: 8px;
     }
 
-    #ui-hint h1 {
-      font-size: 64px;
-      margin: 0 0 20px 0;
-      letter-spacing: 10px;
-      color: #ff4655;
-      text-shadow: 0 0 20px rgba(255, 70, 85, 0.5);
+    .foundry-content::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0.3);
     }
 
-    #ui-hint p {
-      font-size: 24px;
-      animation: blink 1s infinite;
+    .foundry-content::-webkit-scrollbar-thumb {
+      background: rgba(0, 229, 255, 0.5);
+      border-radius: 4px;
     }
 
-    .controls {
-      margin-top: 40px;
-      display: flex;
-      gap: 30px;
-      font-size: 14px;
-      color: rgba(255, 255, 255, 0.6);
-    }
-
-    @keyframes blink {
-
-      0%,
-      100% {
-        opacity: 1;
-      }
-
-      50% {
-        opacity: 0.5;
-      }
+    .foundry-content::-webkit-scrollbar-thumb:hover {
+      background: rgba(0, 229, 255, 0.8);
     }
   </style>
 </head>
 
 <body>
   <canvas id="renderCanvas"></canvas>
+
+  <!-- Main Menu Panel -->
+  <div id="main-menu-panel">
+    <h1>PROTOCOL: ZERO</h1>
+    <div class="menu-buttons">
+      <button class="menu-btn" id="btn-start-game">Start Game</button>
+      <button class="menu-btn" id="btn-foundry">Foundry</button>
+      <button class="menu-btn" id="btn-exit">Exit</button>
+    </div>
+  </div>
+
+  <!-- Foundry Panel -->
+  <div id="foundry-panel">
+    <div class="foundry-header">
+      <h2>FOUNDRY</h2>
+      <button class="back-btn" id="btn-foundry-back">← Back</button>
+    </div>
+    <div class="foundry-content">
+      <div class="weapon-grid" id="weapon-grid">
+        <!-- Weapons will be populated by JavaScript -->
+      </div>
+    </div>
+  </div>
 
   <!-- Game HUD -->
   <div id="game-hud">
@@ -307,27 +479,6 @@
 
   <!-- Crosshair -->
   <div id="crosshair"></div>
-
-  <!-- UI Hint (Overlay) -->
-  <div id="ui-hint">
-    <h1>PROTOCOL: ZERO</h1>
-    <p>CLICK TO START</p>
-    <div class="controls">
-      <span>WASD Move</span>
-      <span>SPACE Jump</span>
-      <span>L-CLICK Shoot</span>
-    </div>
-  </div>
-
-  <!-- Settings Panel (Hidden by default) -->
-  <div id="settings-panel"
-    style="display: none; position: absolute; top: 20px; right: 20px; background: rgba(0,0,0,0.7); padding: 15px; border-radius: 8px; color: white; font-family: sans-serif; z-index: 1000;">
-    <h3 style="margin-top: 0;">SETTINGS</h3>
-    <label>
-      Sensitivity: <span id="sensitivity-value">1.5</span><br>
-      <input type="range" id="sensitivity-slider" min="0.1" max="5.0" step="0.1" value="1.5" style="width: 200px;">
-    </label>
-  </div>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
